--- a/repository/repository/apps/blog/templates/blog/detail.html
+++ b/repository/repository/apps/blog/templates/blog/detail.html
@@ -60,28 +60,30 @@
 
                         <div class="post-meta clearfix">
                             <span class="date">{{ object.create_time | date:"Y-m-d H:i" }}</span>
-                            <span class="category"><a href="#" title="View all posts in Server &amp; Database">Server &amp; Database</a></span>
-                            <span class="comments"><a href="#"
-                                                      title="Comment on Integrating WordPress with Your Website">3 Comments</a></span>
-                            <span class="like-count">66</span>
+                            <span class="category"><a href="" title="View all posts in Server &amp; Database">Server &amp; Database</a></span>
+                            <span class="comments"><a href="{% url 'blog:edit' pk=object.id %}" >编辑</a></span>
+                            <span class="deletelink"><a href="{% url 'blog:del' pk=object.id %}" >删除</a></span>
+{#                            <span class="like-count">66</span>#}
                         </div><!-- end of post meta -->
 
-                        {{ object.content_md | safe| default:" <i>正文无内容</i>" }}
+                        {{ object.content | safe| default:" <i>正文无内容</i>" }}
 
                     </article>
 
                     <div class="like-btn">
 
-                        <form id="like-it-form" action="#" method="post">
-                            <span class="like-it ">66</span>
+                        <form id="like-it-form" action="" method="post">
+                            {% if not object.is_active %}
+                                <span> 该文章成功被删除！</span>
+                            {% endif %}
                             <input type="hidden" name="post_id" value="99">
                             <input type="hidden" name="action" value="like_it">
                         </form>
 
                         <span class="tags">
                             <strong>Tags:&nbsp;&nbsp;</strong>
-                            <a href="#" rel="tag">basic</a>,
-                            <a href="#" rel="tag">setting</a>,
+                            <a href="" rel="tag">basic</a>,
+                            <a href="" rel="tag">setting</a>,
                             <a href="http://knowledgebase.inspirythemes.com/tag/website/" rel="tag">website</a>
                         </span>
 
@@ -112,75 +114,7 @@
 
 
                 <!-- start of sidebar -->
-                {#                <aside class="span4 page-sidebar">#}
-                {##}
-                {#                    <section class="widget">#}
-                {#                        <div class="support-widget">#}
-                {#                            <h3 class="title">Support</h3>#}
-                {#                            <p class="intro">Need more support? If you did not found an answer, contact us for further#}
-                {#                                help.</p>#}
-                {#                        </div>#}
-                {#                    </section>#}
-                {##}
-                {##}
-                {#                    <section class="widget">#}
-                {#                        <h3 class="title">Featured Articles</h3>#}
-                {#                        <ul class="articles">#}
-                {#                            <li class="article-entry standard">#}
-                {#                                <h4><a href="single.html">Integrating WordPress with Your Website</a></h4>#}
-                {#                                <span class="article-meta">25 Feb, 2013 in <a href="#"#}
-                {#                                                                              title="View all posts in Server &amp; Database">Server &amp; Database</a></span>#}
-                {#                                <span class="like-count">66</span>#}
-                {#                            </li>#}
-                {#                            <li class="article-entry standard">#}
-                {#                                <h4><a href="single.html">WordPress Site Maintenance</a></h4>#}
-                {#                                <span class="article-meta">24 Feb, 2013 in <a href="#"#}
-                {#                                                                              title="View all posts in Website Dev">Website Dev</a></span>#}
-                {#                                <span class="like-count">15</span>#}
-                {#                            </li>#}
-                {#                            <li class="article-entry video">#}
-                {#                                <h4><a href="single.html">Meta Tags in WordPress</a></h4>#}
-                {#                                <span class="article-meta">23 Feb, 2013 in <a href="#"#}
-                {#                                                                              title="View all posts in Website Dev">Website Dev</a></span>#}
-                {#                                <span class="like-count">8</span>#}
-                {#                            </li>#}
-                {#                            <li class="article-entry image">#}
-                {#                                <h4><a href="single.html">WordPress in Your Language</a></h4>#}
-                {#                                <span class="article-meta">22 Feb, 2013 in <a href="#"#}
-                {#                                                                              title="View all posts in Advanced Techniques">Advanced Techniques</a></span>#}
-                {#                                <span class="like-count">6</span>#}
-                {#                            </li>#}
-                {#                        </ul>#}
-                {#                    </section>#}
-                {##}
-                {##}
-                {#                    <section class="widget"><h3 class="title">Categories</h3>#}
-                {#                        <ul>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet,">Advanced Techniques</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet,">Designing in WordPress</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet,">Server &amp; Database</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet, ">Theme Development</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet,">Website Dev</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet,">WordPress for Beginners</a></li>#}
-                {#                            <li><a href="#" title="Lorem ipsum dolor sit amet, ">WordPress Plugins</a></li>#}
-                {#                        </ul>#}
-                {#                    </section>#}
-                {##}
-                {#                    <section class="widget">#}
-                {#                        <h3 class="title">Recent Comments</h3>#}
-                {#                        <ul id="recentcomments">#}
-                {#                            <li class="recentcomments"><a href="#" rel="external nofollow" class="url">John Doe</a> on#}
-                {#                                <a href="#">Integrating WordPress with Your Website</a></li>#}
-                {#                            <li class="recentcomments">saqib sarwar on <a href="#">Integrating WordPress with Your#}
-                {#                                Website</a></li>#}
-                {#                            <li class="recentcomments"><a href="#" rel="external nofollow" class="url">John Doe</a> on#}
-                {#                                <a href="#">Integrating WordPress with Your Website</a></li>#}
-                {#                            <li class="recentcomments"><a href="#" rel="external nofollow" class="url">Mr WordPress</a>#}
-                {#                                on <a href="#">Installing WordPress</a></li>#}
-                {#                        </ul>#}
-                {#                    </section>#}
-                {##}
-                {#                </aside>#}
+
                 <!-- end of sidebar -->
             </div>
         </div>
